# cdptool

./: CLAUDE.md  CREATION.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  deploy.yml  publish.yml
crates/cdptool/: Cargo.toml
crates/cdptool-web/: Cargo.toml
crates/cdptool-web/src/: lib.rs
crates/cdptool/src/: bitstream.rs  cdp.rs  error.rs  extract.rs  huffman.rs  lib.rs  lzss.rs
crates/cdptool/tests/: regression.rs  round_trip.rs
web/: app.js  index.html  style.css
